first step of migration to postgre database

--- a/CRUD_RazorPage_2_1/appsettings.json
+++ b/CRUD_RazorPage_2_1/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Username=postgres;Password=admin;Database=crud_razorpage_2_1"
   },
   "Logging": {
